third_party/move/move-compiler-v2/tests/more-v1/parser/struct_without_fields.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/struct_without_fields.move:3:13
  │
3 │     struct S;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'
